<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lobby"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.softwaresparks.mob.downloadit_beta.AppViews.RawtestActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/norespo"
                android:id="@+id/tv_response"
                android:gravity="center"
                android:layout_weight="9" />

            <ProgressBar
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pb_upload"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_weight="0">

            <Button
                android:text="@string/httpget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_httpGet" />

            <Button
                android:text="@string/httpput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_httpPut" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
