<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="25">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_header"
        android:layout_weight="11.75"
        android:weightSum="20"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="12.5"
            android:gravity="right">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="18dp"
                app:srcCompat="@drawable/ic_logo_large"
                android:id="@+id/img_app"
                android:layout_marginTop="7dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6.5">

            <TextView
                android:text="@string/app_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/tv_apptitle"
                android:layout_weight="1"
                android:textSize="@dimen/font_apptitle"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="7dp"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_container"
        android:layout_weight="2.25"></LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_navigations"
        android:layout_weight="11"
        android:weightSum="10">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/layout_files">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_files_normal"
                android:id="@+id/imageButton2"
                android:layout_weight="1" />

            <TextView
                android:text="@string/tvfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tv_filedesc"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="@dimen/font_navs" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/layout_category">

            <ImageButton
                android:layout_width="match_parent"
                app:srcCompat="@drawable/ic_category_normal"
                android:id="@+id/imgb_category"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <TextView
                android:text="@string/tvCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tv_category"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="@dimen/font_navs" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/layout_subscribe">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_subscription_normal"
                android:id="@+id/imgb_subscribe"
                android:layout_weight="1" />

            <TextView
                android:text="@string/tvSubscribe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tv_subscribe"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="@dimen/font_navs" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/layout_help">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_help_normal"
                android:id="@+id/imgb_help"
                android:layout_weight="1" />

            <TextView
                android:text="@string/tvHelp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tv_help"
                android:layout_weight="1"
                android:textSize="@dimen/font_navs"
                android:gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/layout_settings">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_settings_normal"
                android:id="@+id/imgb_settings"
                android:layout_weight="1" />

            <TextView
                android:text="@string/tvSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_settings"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="@dimen/font_navs" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>