<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:paddingLeft="70dp"
    android:paddingRight="70dp"
    android:background="@drawable/bg_login">


    <Space
        android:layout_width="match_parent"
        android:layout_height="70dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_logo_large"
        android:id="@+id/imageView"
        android:layout_weight="2.26"
        />

    <TextView
        android:text="@string/app_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="0.22"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="File sharing made easy"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="18sp"/>

        <EditText
            android:drawableStart="@drawable/ic_subscription_normal"
            android:layout_width="match_parent"
            android:background="@drawable/edit_border"
            android:layout_height="40dp"
            android:drawablePadding="-20dp"
            android:inputType="textPersonName"
            android:drawableTint="@color/white"
            android:text=""
            android:hint="@string/username"
            android:textColorHint="@color/white"
            android:ems="11"
            android:gravity="center"
            android:id="@+id/edtUsername"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="sans-serif-thin"
            android:layout_marginTop="20dp" />

        <EditText
            android:drawableStart="@drawable/ic_login_lock"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_border"
            android:inputType="textPassword"
            android:drawablePadding="-20dp"
            android:ems="10"
            android:id="@+id/edtPassword"
            android:hint="@string/password"
            android:gravity="center"
            android:drawableTint="@color/white"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:fontFamily="sans-serif-thin"
            android:layout_marginTop="20dp" />



    <Button
        android:text="login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-thin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/button_border"
        android:id="@+id/button"
        android:layout_marginTop="20dp" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.26" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Forget Password"
        android:background="@android:color/transparent"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-thin"
        android:textAllCaps="false"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="or login with"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-thin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginTop="10dp">

        <Button
            android:drawableLeft="@drawable/ic_login_facebook"
            android:text="Facebook"
            android:paddingStart="10dp"
            android:textAllCaps="false"
            android:background="@drawable/button_border"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:drawablePadding="-20dp"
            android:layout_weight="0.5"
            android:fontFamily="sans-serif-thin"
            android:id="@+id/button2"
            android:drawableTint="@color/white"/>

        <Button
            android:drawableLeft="@drawable/ic_login_google"
            android:text="Google"
            android:textAlignment="center"
            android:background="@drawable/button_border"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:fontFamily="sans-serif-thin"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:id="@+id/button3"
            android:drawablePadding="-20dp"
            android:textAllCaps="false"
            android:paddingStart="10dp"
            android:drawableTint="@color/white"/>

    </LinearLayout>

    <Button
        android:text="create an account"
        android:background="@android:color/transparent"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-thin"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_weight="0.08"
        android:layout_marginTop="10dp"/>

</LinearLayout>